tests/js/invalid/list/get-0.buri
item = [0, 1, 2, 3, 4]:get("3")